<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <EditText
        android:id="@+id/edit_number_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:maxLength="16"
        android:hint="@string/enter_number_card"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"/>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/button_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_number_card">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scheme_network"
                android:textColor="@color/grey"/>
            <TextView
                android:id="@+id/scheme_network_bank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nulll"
                android:textColor="@color/black"/>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/brand"
                android:textColor="@color/grey"/>
            <TextView
                android:id="@+id/brand_bank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nulll"
                android:textColor="@color/black"/>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_number"
                android:textColor="@color/grey"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_marginTop="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/length"
                        android:textColor="@color/grey"/>
                    <TextView
                        android:id="@+id/length_card_bank"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nulll"
                        android:textColor="@color/black"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_marginStart="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_marginTop="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/luhn"
                        android:textColor="@color/grey"/>
                    <TextView
                        android:id="@+id/luhn_card_bank"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nulll"
                        android:textColor="@color/black"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_marginStart="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type"
                android:textColor="@color/grey"/>
            <TextView
                android:id="@+id/type_bank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nulll"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prepaid"
                android:textColor="@color/grey"/>
            <TextView
                android:id="@+id/prepaid_bank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nulll"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/country"
                android:textColor="@color/grey"/>
            <TextView
                android:id="@+id/country_bank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nulll"
                android:textColor="@color/black"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="30dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bank"
                android:textColor="@color/grey"/>
            <TextView
                android:id="@+id/name_bank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nulll"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/site_bank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/number_phone_bank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"/>
        </LinearLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/button_see_history"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_see_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/see_history"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>